[tool.poetry]
name = "redis-ttl-manager"
version = "0.1.0"
description = ""
authors = ["pixelead0"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.7"
click = "^8.1.7"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
faker = "^26.0.0"
fakeredis = "^2.23.3"
flake8 = "^7.1.0"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-sugar = "^1.0.0"
isort = "^5.13.2"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 50
exclude_lines = ["pragma: not covered", "@overload"]

# Configuración de pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore:The 'app' shortcut is now deprecated:DeprecationWarning"
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
skip_glob = ["src/blib2to3", "tests/data", "profiling"]
known_first_party = ["black", "blib2to3", "blackd", "_black_version"]

[tool.flake8]
max-line-length = 100
select = ["E", "F", "W", "C90"]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
exclude = ["__pycache__", "migrations", ".venv", "build", "dist"]
max-complexity = 10
show-source = true
statistics = true
count = true
